static/styles/main.scss
@import 'normalize';
@import './../bower_components/bourbon/app/assets/stylesheets/bourbon';
@import 'grid-settings';
@import './../bower_components/neat/app/assets/stylesheets/neat';

/*

    Better than Predator

    @version: 1.0
    @author: Wil Linssen

    CONTENTS ----------

        - BODY
        - GLOBAL STYLES
        - BUTTONS
        - SEARCH
        - RESULTS

    -------------------

*/

$base_font: 16;
$font_stack: 'Pathway Gothic One', sans-serif;
$color__contast: #343739;


/* BODY
--------------------------------------------------------- */
html {
    -webkit-font-smoothing: antialiased;
}
body {
    background-image: url(/static/images/bigbg.jpg);
    @include prefixer(background-size, cover, webkit moz o);
    background-repeat:  no-repeat;
    background-position: center center;
    background-attachment: fixed;
    background-color: #050D10;
    font-family: $font_stack;
    font-size: 100%;
    line-height: em(16);
    color: #fff;
}
#main {
    @include outer-container;

    padding-top: em(24);

    @include media($small) {
        padding-top: em(8);
    }
}


/* GLOBAL
--------------------------------------------------------- */
a {
    text-decoration: underline;
    color: #fff;

    &:hover,
    &:focus {
        text-decoration: none;
    }
}
.button {
    display: inline-block;
    text-decoration: none;
    line-height: 1em;
    text-align: center;
    background: $color__contast;
    margin-bottom: em(24, 24);
    padding: em(16, 24) em(8, 24);
    padding-left: em(64, 24);
    position: relative;

    &:hover,
    &:focus {
        background-color: lighten($color__contast, 5);
    }
    &:active {
        background-color: darken($color__contast, 10);
    }
    &:after {
        content: ' ';
        width: em(56, 24);
        height: 100%;
        display: block;
        background: darken($color__contast, 5) no-repeat 50% 50%;
        position: absolute;
        top: 0;
        left: 0;
    }
}
h1 {
    @include span-columns(6);
    @include shift(6);

    font-size: em(56);
    line-height: 1em;
    text-align: center;
    margin-top: 0;
    margin-bottom: em(24, 56);
    color: white;

    @include media($small) {
        @include fill-parent;
        @include shift(0);

        font-size: em(40);
    }
}
h2 {
    font-size: em(40);
    line-height: 1em;
    padding: 0 em(4, 40);
    width: 100%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    text-transform: uppercase;

    @include media($small) {
        font-size: em(24);
    }
}
h3 {
    font-size: em(40, 24);
    margin-bottom: em(24, 40);
    font-weight: 300;
}
p {
    margin-bottom: 1em;
    font-weight: 400;
}
hr {
    @include fill-parent;

    border: 0;
    border-bottom: 1px dashed #fff;
    background: none;
    margin-bottom: em(24, 24);

    @include media($small) {
        display: none;
    }
}
input[type="search"] {
    @include box-sizing(border-box);
    @include border-top-radius(0);
    @include border-left-radius(0);
    @include border-bottom-radius(0);
    @include border-right-radius(0);

    -webkit-appearance: none;
    display: block;
}


/* BUTTONS
--------------------------------------------------------- */
.button--again:after {
    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20viewBox%3D%220%200%2025%2025%22%20style%3D%22background-color%3A%23ffffff00%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2225%22%20height%3D%2225%22%3E%3Cg%3E%3Cpath%20d%3D%22M0%2012.5c0-6.904%205.596-12.5%2012.5-12.5s12.5%205.596%2012.5%2012.5-5.596%2012.5-12.5%2012.5-12.5-5.596-12.5-12.5z%22%20fill%3D%22%23161819%22/%3E%3Cpath%20d%3D%22M19%2014.5h-7.167v3.5l-5.833-5.5%205.833-5.5v3.5h7.167v4z%22%20fill%3D%22%23fff%22/%3E%3C/g%3E%3C/svg%3E');
}
.button--tweet:after {
    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2230.762%22%20height%3D%2225%22%20viewBox%3D%220%200%2030.762%2025%22%3E%3Cpath%20fill%3D%22%23fff%22%20d%3D%22M30.762%202.959c-1.132.502-2.348.841-3.625.994%201.303-.781%202.304-2.018%202.775-3.492-1.219.723-2.57%201.249-4.008%201.532-1.15-1.227-2.791-1.993-4.606-1.993-3.486%200-6.311%202.826-6.311%206.311%200%20.495.056.976.163%201.438-5.245-.263-9.896-2.775-13.008-6.594-.544.932-.855%202.017-.855%203.173%200%202.19%201.114%204.121%202.808%205.253-1.035-.032-2.008-.316-2.859-.789l-.001.079c0%203.058%202.176%205.609%205.063%206.189-.53.144-1.087.221-1.663.221-.407%200-.802-.04-1.187-.113.803%202.507%203.134%204.332%205.896%204.383-2.16%201.693-4.881%202.702-7.838%202.702-.509%200-1.012-.03-1.506-.088%202.793%201.79%206.11%202.835%209.675%202.835%2011.609%200%2017.957-9.617%2017.957-17.957%200-.274-.006-.546-.018-.816%201.232-.89%202.302-2.002%203.148-3.268z%22/%3E%3C/svg%3E');
}


/* SEARCH
--------------------------------------------------------- */
.search {
    @include span-columns(8);
    @include shift(2);

    font-size: em(24);
}

.search__query {
    @include fill-parent;

    font-family: $font_stack;
    padding: em(16, 24) em(40, 24) em(16, 24) em(16, 24);
    border: none;
    color: $color__contast;
}
.search__query--loading {
    background: #fff url('/static/images/dots.gif') no-repeat 97% 50%;
}
.search__result-list {
    background: transparentize($color__contast, 0.6);
    clear: both;
    margin: 0;
    list-style: none;
    padding: 0;
}
.search__result-item {
    padding: em(8, 20);
    line-height: 1em;
    color: white;
    text-decoration: none;
    display: block;
}
.search__result-item--active,
.search__result-item:hover,
.search__result-item:focus {
    background: $color__contast;
}


/* RESULTS
--------------------------------------------------------- */
.film-results {
    @include span-columns(6);

    margin-bottom: em(24);
    position: absolute;
    left: 0;

    @include media($small) {
        @include fill-parent;

        position: static;
    }
}
.film-results__film {
    @include span-columns(3 of 6);

    position: relative;

    @include media($small) {
        @include span-columns(2);
    }
}
.film-results__poster,
.film-results__rating {
    @include box-sizing(border-box);

    padding: 8px;
    background: white;
}
.film-results__poster {
    img {
        width: 100%;
    }
}
.film-results__rating {
    font-size: em(64);
    padding-top: 0;
    line-height: 1;
    color: #506666;
    letter-spacing: -3px;
    overflow: hidden;

    @include media($small) {
        font-size: em(48);
        margin: 8px;
        padding-top: 8px;
        position: absolute;
        left: 0;
        bottom: 0;
        background: transparentize($color__contast, 0.1);
        color: #fff;
    }

    small {
        font-size: em(24, 96);
        letter-spacing: 0;
    }
}
.film-results__score {
    @include span-columns(1 of 3);
}
.film-results__stars {
    @include span-columns(2 of 3);
    @include omega;

    float: right;

    svg {
        width: 100%;
        height: 1em;
    }
    .outline {
        stroke: #CCCCCC;

        @include media($small) {
            stroke: #555555;
        }
    }
    .highlight {
        stroke: #CD2E1B;
    }
}
.info {
    @include span-columns(6);
    @include shift(6);

    font-size: em(24);
    color: white;
    line-height: 1.2;
    position: static;

    @include media($small) {
        @include span-columns(2);
        @include shift(0);

        position: relative;
        font-size: em(16);
    }

    h3 {
        margin: 0;
    }
}
.info__button {
    @include span-columns(3 of 6);

    @include media($small) {
        @include fill-parent;
        @include omega;
        @include shift(2 of 2);

        font-size: em(20, 16);
        position: absolute;
        left: 0;
        top: 0;
    }
}
.info__button--last {
    @include omega;

    @include media($small) {
        top: 3em;
    }
}
.credit {
    font-size: em(16, 24);
}

